<resources>
    <string name="app_name">Rapid Rentals</string>
    <string name="itemtitle">itemTitle</string>
    <string name="itemprice">itemPrice</string>
    <string name="itemdesc">itemDesc</string>
    <string name="buy">Buy</string>

    <!-- Menu -->
    <string name="open_category_menu">Open</string>
    <string name="close_category_menu">Close</string>
    <string name="username">Username</string>
    <string name="renting">Renting</string>
    <string name="currently_renting">Currently renting</string>
    <string name="currently_listing">Currently listing</string>
    <string name="return_item">Return</string>
    <string name="username_key">username</string>
    <string name="previously_rented">Previously rented</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="location">Location</string>
    <string name="SHARED_PREFS">SHARED_PREFS</string>
    <string name="phone_number">Phone Number</string>
    <string name="payment_method">Payment Method</string>
    <string name="user_id_key">user id</string>
    <string name="user_location_string">user location</string>
</resources>