<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/itemTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/itemtitle"
        android:textSize="24sp"
        android:textStyle="bold"
        style="@style/rapidRentalsTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemImage" />

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/itemprice"
        android:textSize="20sp"
        android:textStyle="bold"
        style="@style/rapidRentalsTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemTitle" />

    <TextView
        android:id="@+id/itemDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/itemdesc"
        android:textSize="16sp"
        style="@style/rapidRentalsTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemPrice"/>
</androidx.constraintlayout.widget.ConstraintLayout>