<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C25651">

    <TextView
        android:id="@+id/username"
        android:layout_width="256dp"
        android:layout_height="56dp"
        android:padding="10dp"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rentingRecycler"
        android:layout_width="0dp"
        android:layout_height="174dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listingRecycler"
        android:layout_width="408dp"
        android:layout_height="180dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="314dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:padding="10dp"
        android:text="@string/currently_renting"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="363dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:text="@string/currently_listing"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rentingRecycler" />
</androidx.constraintlayout.widget.ConstraintLayout>