<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#CA5555"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CA5555">

            <ImageView
                android:id="@+id/itemImage"
                android:layout_width="match_parent"
                android:layout_height="298dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/itemtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/currentlyRenting"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/itemTitle"
                android:layout_width="223dp"
                android:layout_height="46dp"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/itemtitle"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemImage" />


            <TextView
                android:id="@+id/currentlyRenting"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/currently_renting"
                android:textSize="25sp"
                android:textStyle="bold"
                android:background="#A25651"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/itemDescription"
                android:layout_width="402dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/itemdesc"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemPrice" />

            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/itemprice"
                android:padding="4dp"
                android:layout_margin="4dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemTitle" />

            <!-- Bottom Navigation Bar -->
            <Button
                android:id="@+id/returnButton"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:text="@string/return_item"
                android:textColor="@color/white"
                android:background="@drawable/black_rounded_outline_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemDescription"
                app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
                app:layout_constraintVertical_bias="0.306" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bottom_guideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="40dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
    android:id="@+id/bottom_navigation"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_gravity="bottom"
    android:background="@drawable/nav_bar_background"
    app:itemIconSize="40dp"
    app:menu="@menu/bottom_navigation_menu" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>