<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#CA5555">

            <ImageView
                android:id="@+id/itemImage"
                android:layout_width="match_parent"
                android:layout_height="348dp"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/itemtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/itemTitle"
                android:layout_width="403dp"
                android:layout_height="54dp"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/itemtitle"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemImage" />

            <TextView
                android:id="@+id/itemDescription"
                android:layout_width="402dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="@string/itemdesc"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemPrice" />

            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/itemprice"
                android:padding="4dp"
                android:layout_margin="4dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemTitle" />

            <Button
                android:id="@+id/buyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border"
                android:text="@string/buy"
                android:textColor="@color/white"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemDescription"
                app:layout_constraintBottom_toTopOf="@id/bottom_guideline" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bottom_guideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="128dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:background="@drawable/nav_bar_background"
        app:itemIconSize="40dp"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>