<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary">

            <ImageView
                android:id="@+id/itemImage"
                android:layout_width="match_parent"
                android:layout_height="348dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/itemtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/itemTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginStart="4dp"
                android:padding="4dp"
                android:paddingStart="12dp"
                android:text="@string/itemtitle"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemImage" />

            <TextView
                android:id="@+id/itemDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:paddingStart="12dp"
                android:text="@string/itemdesc"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemStatus" />

            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="200dp"
                android:layout_height="36dp"
                android:text="@string/itemprice"
                android:padding="4dp"
                android:paddingStart="12dp"
                android:layout_margin="4dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemTitle" />

            <TextView
                android:id="@+id/itemRentDate"
                android:layout_width="200dp"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:gravity="end"
                android:padding="4dp"
                android:paddingEnd="12dp"
                android:text="itemRentDate"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemTitle" />

            <TextView
                android:id="@+id/itemTipAmount"
                android:layout_width="200dp"
                android:layout_height="32dp"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:paddingStart="12dp"
                android:text="itemTipAmount"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemPrice" />

            <TextView
                android:id="@+id/itemStatus"
                android:layout_width="200dp"
                android:layout_height="32dp"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:paddingStart="12dp"
                android:text="itemStatus"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemTipAmount"/>

            <TextView
                android:id="@+id/itemDuration"
                android:layout_width="200dp"
                android:layout_height="32dp"
                android:layout_margin="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:gravity="end"
                android:padding="4dp"
                android:paddingEnd="12dp"
                android:text="itemDuration"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemRentDate" />

            <Button
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/button_border"
                android:text="Rent Again"
                android:padding="8dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/itemDescription"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/bottom_guideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="40dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:background="@drawable/nav_bar_background"
        app:itemIconSize="40dp"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>